# gftools

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  bgen2vcf.cpp
shell/: bgen  notes  shapeit_hap_extract
src/: CMakeLists.txt  hapfile.cpp  hapfile.h  iofile.cpp  iofile.h  readhapfile.h
tests/: CMakeLists.txt  io.cc
